# isaac_sim_data_simulator

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  example.env
config/: positions.json  simulation.json
data/: events.db
docs/: SPEC.md  integration_real_machines.md  mqtt_format.md  positions_guide.md
isaac_sim/: README.md  conftest.py  isaac_arm_controller_example.py  mqtt_arm_bridge.py  requirements.txt
isaac_sim/tests/: test_bridge.py
libs/common/: pyproject.toml
libs/common/isaac_common/: __init__.py  arm_timing.py  clock.py  config.py  event_sink.py  logging.py  mqtt_client.py  schemas.py  settings.py  skeleton.py  test_report.py  topics.py
services/data_collector/: Dockerfile  collector.py  conftest.py  main.py  socket_gateway.py
services/data_collector/tests/: test_collector.py  test_socket_gateway.py
services/machine_simulator/: Dockerfile  conftest.py  machine.py  main.py
services/machine_simulator/data/: demo.md.err.txt  demo.md.pass.txt
services/machine_simulator/tests/: test_machine.py  test_test_report.py
services/mqtt_publisher/: Dockerfile  conftest.py  main.py  translate.py
services/mqtt_publisher/tests/: test_translate.py
services/scheduler_engine/: Dockerfile  capacity.py  conftest.py  live_driver.py  main.py  policy.py  requirements.txt  sim_driver.py
services/scheduler_engine/tests/: test_arm_timing.py  test_capacity.py  test_policy.py
