[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-common"
version = "0.1.0"
description = "Shared schemas / mqtt client / config / logging for the Isaac Sim scheduling simulator"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "pydantic>=2.5",
]

[tool.setuptools.packages.find]
include = ["isaac_common*"]
